--- a/web/reader.html
+++ b/web/reader.html
@@ -283,6 +283,7 @@
                         </a>
                         <div class="dropdown-menu" aria-labelledby="navbarDropdown">
                             <a class="dropdown-item" href="pokedb">Atualizar tabela de Pokemons</a>
+                            <a class="dropdown-item" href="json_update">Atualizar JSONs</a>
                             <!-- <div class="dropdown-divider"></div> -->
                         </div>
                     </li>
